update gradle, vpn permission

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ navigationCompose = "2.7.6"
 roomVersion = "2.6.1"
 timber = "5.0.1"
 tunnel = "1.0.20230706"
-androidGradlePlugin = "8.2.2"
+androidGradlePlugin = "8.3.0-rc01"
 kotlin = "1.9.22"
 ksp = "1.9.22-1.0.16"
 composeBom = "2024.01.00"
