--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,10 +9,8 @@ coreKtx = "1.12.0"
 datastorePreferences = "1.0.0"
 desugar_jdk_libs = "2.0.4"
 espressoCore = "3.5.1"
-firebase-crashlytics-gradle = "2.9.9"
-google-services = "4.4.1"
 hiltAndroid = "2.50"
-hiltNavigationCompose = "1.1.0"
+hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
 kotlinx-serialization-json = "1.6.3"
 lifecycle-runtime-compose = "2.7.0"
@@ -21,16 +19,16 @@ navigationCompose = "2.7.7"
 roomVersion = "2.6.1"
 timber = "5.0.1"
 tunnel = "1.1.0"
-androidGradlePlugin = "8.3.0-rc02"
+androidGradlePlugin = "8.3.0"
 kotlin = "1.9.22"
-ksp = "1.9.22-1.0.16"
-composeBom = "2024.02.00"
-firebaseBom = "32.7.2"
-compose = "1.6.1"
-crashlytics = "18.6.2"
-analytics = "21.5.1"
+ksp = "1.9.22-1.0.17"
+composeBom = "2024.02.01"
+compose = "1.6.3"
 zxingAndroidEmbedded = "4.3.0"
 zxingCore = "3.5.3"
+
+#plugins
+gradlePlugins-kotlinxSerialization = "1.8.21"
 
 
 [libraries]
@@ -84,17 +82,12 @@ material-icons-extended = { module = "androidx.compose.material:material-icons-e
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 tunnel = { module = "com.zaneschepke:wireguard-android", version.ref = "tunnel" }
 
-#firebase
-google-firebase-crashlytics-ktx = { module = "com.google.firebase:firebase-crashlytics-ktx", version.ref = "crashlytics" }
-google-firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx", version.ref = "analytics" }
-firebase-crashlytics-gradle = { module = "com.google.firebase:firebase-crashlytics-gradle", version.ref = "firebase-crashlytics-gradle" }
-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
-google-services = { module = "com.google.gms:google-services", version.ref = "google-services" }
-
 zxing-core = { module = "com.google.zxing:core", version.ref = "zxingCore" }
 zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxingAndroidEmbedded" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hiltAndroid" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlinxSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "gradlePlugins-kotlinxSerialization" }
