feat: add amnezia side-by-side

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,13 @@
 [versions]
 accompanist = "0.34.0"
-activityCompose = "1.8.2"
+activityCompose = "1.9.0"
+amneziawgAndroid = "1.2.0"
 androidx-junit = "1.1.5"
 appcompat = "1.6.1"
 biometricKtx = "1.2.0-alpha05"
 coreGoogleShortcuts = "1.1.0"
-coreKtx = "1.12.0"
-datastorePreferences = "1.0.0"
+coreKtx = "1.13.1"
+datastorePreferences = "1.1.1"
 desugar_jdk_libs = "2.0.4"
 espressoCore = "3.5.1"
 hiltAndroid = "2.51"
@@ -23,8 +24,8 @@ tunnel = "1.0.20230706"
 androidGradlePlugin = "8.4.0-rc02"
 kotlin = "1.9.23"
 ksp = "1.9.23-1.0.19"
-composeBom = "2024.03.00"
-compose = "1.6.4"
+composeBom = "2024.05.00"
+compose = "1.6.7"
 zxingAndroidEmbedded = "4.3.0"
 zxingCore = "3.5.3"
 
@@ -41,6 +42,7 @@ accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayo
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
 
 #room
+amneziawg-android = { module = "com.zaneschepke:amneziawg-android", version.ref = "amneziawgAndroid" }
 androidx-biometric-ktx = { module = "androidx.biometric:biometric-ktx", version.ref = "biometricKtx" }
 androidx-core = { module = "androidx.core:core", version.ref = "coreKtx" }
 androidx-core-google-shortcuts = { module = "androidx.core:core-google-shortcuts", version.ref = "coreGoogleShortcuts" }
