--- a/.github/workflows/issue-workflow.yml
+++ b/.github/workflows/issue-workflow.yml
@@ -15,6 +15,6 @@ jobs:
         run: |
           msg_text='${{ github.actor }} updated an issue:
             status: ${{ github.event.issue.state }} - #${{ github.event.issue.number }} ${{ github.event.issue.title }}
-            ${{ github.event.issue.url }}'
+            https://github.com/zaneschepke/wgtunnel/issues/${{ github.event.issue.number }}'
           curl -s -X POST 'https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage' \
           -d "chat_id=${{ secrets.TELEGRAM_TO }}&text=${msg_text}&message_thread_id=${{ secrets.TELEGRAM_TOPIC }}"
