--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -187,11 +187,23 @@ jobs:
       GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: gradle
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Deploy with fastlane
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.2' # Not needed with a .ruby-version file
           bundler-cache: true
+
       - name: Distribute app to Prod track 🚀
         run: (cd ${{ github.workspace }} && bundle install && bundle exec fastlane ${{ inputs.track }})
 
